; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_write_constB.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_write_constB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwriter_shader = type { i32, i32 }
%struct.bytecode_buffer = type { i32 }

@D3DSIO_DEFB = common dso_local global i32 0, align 4
@D3DSPR_CONSTBOOL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bwriter_shader*, %struct.bytecode_buffer*, i32)* @write_constB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_constB(%struct.bwriter_shader* %0, %struct.bytecode_buffer* %1, i32 %2) #0 {
  %4 = alloca %struct.bwriter_shader*, align 8
  %5 = alloca %struct.bytecode_buffer*, align 8
  %6 = alloca i32, align 4
  store %struct.bwriter_shader* %0, %struct.bwriter_shader** %4, align 8
  store %struct.bytecode_buffer* %1, %struct.bytecode_buffer** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.bwriter_shader*, %struct.bwriter_shader** %4, align 8
  %8 = getelementptr inbounds %struct.bwriter_shader, %struct.bwriter_shader* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.bwriter_shader*, %struct.bwriter_shader** %4, align 8
  %11 = getelementptr inbounds %struct.bwriter_shader, %struct.bwriter_shader* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @D3DSIO_DEFB, align 4
  %14 = load i32, i32* @D3DSPR_CONSTBOOL, align 4
  %15 = load %struct.bytecode_buffer*, %struct.bytecode_buffer** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @write_const(i32 %9, i32 %12, i32 %13, i32 %14, %struct.bytecode_buffer* %15, i32 %16)
  ret void
}

declare dso_local i32 @write_const(i32, i32, i32, i32, %struct.bytecode_buffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
